# IMRTsolver

./: .gitignore  ACO  AS  CMakeLists.txt  IAS  README.md  README.md.save  TEST2  config_old.txt  imrt4irace.py  obj_scores.txt  openbeamlets.txt  results.csv  scores.txt  search_scores.txt  target_scores68.txt  test.csv
_irace/: c1-5-1342866578.stderr  c1-5-1342866578.stdout  c1-5-285921008.stderr  c1-5-285921008.stdout  imrt4irace.py  initial_config.txt  instancesTRT.txt  instancesTRT4.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
_irace_config_gs/: configurations.txt  instances.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
configuration/: c1-7-1965377318.stdout  ctestConfig1-instance1-1234567.stdout  ctestConfig2-instance1-1234567.stdout  generator.R  instances.txt  irace.Rdata  parameters.txt  scenario.txt  target-runner
data/: .gitignore  generator.py  solucion_guille_0_70_140_210_281.txt  test_instance_coordinates.txt  test_instance_organs.txt  testinstance_0_70_140_210_280.txt
docs/: search.json
extras/: organ0.txt  organ1.txt  organ2.txt
fwk4exps/: config-TRT.txt  config-all.txt  config-alpha.txt  config-daols_setup.txt  config-daols_setup_int.txt  config-ibodao.txt  config-ibodaopsize.txt  config-ibols_setup.txt  config-neighbourhood.txt  config-perturb.txt  config-psize.txt  config-setup.txt  config-setup.txt.save  config.txt  config_mixedils.txt  final_results.txt  fwk4exps.py  imrt4irace.py  instances.txt  instancesTRT.txt  state.txt
main/: #aperture_solver.cpp#  aco_solver.cpp  aperture_solver.cpp  daoils.cpp  intensity_aperture_solver.cpp  leaf-sequencing-algorithm.cpp  test.cpp  test2.cpp
output/: equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_1.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_1.conv.traj  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_1.out  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_10.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_10.conv.traj  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_10.out  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_11.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_11.conv.traj  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_11.out  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_12.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_12.conv.traj  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_12.out  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_13.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_13.conv.traj  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_13.out  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_14.conv  equidist00.txt_equidist-coord.txt_dao_ls_0_10000_3_0_3_3_0_0_5_1_20_2_14.conv.traj  (+28644 more)
(+14378 files in other folders)
